k8s/base/13-workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datahub-analytics-worker
  namespace: datahub
  labels:
    app.kubernetes.io/name: datahub-analytics-worker
    app.kubernetes.io/part-of: haskell-datahub
spec:
  replicas: 1

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app.kubernetes.io/name: datahub-analytics-worker

  template:
    metadata:
      labels:
        app.kubernetes.io/name: datahub-analytics-worker
        app.kubernetes.io/part-of: haskell-datahub

    spec:
      containers:
        - name: worker
          image: haskell-datahub:dev
          imagePullPolicy: Never

          args:
            - analytics-worker

          resources:
            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 500m
              memory: 256Mi

      terminationGracePeriodSeconds: 15

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datahub-sync-worker
  namespace: datahub
  labels:
    app.kubernetes.io/name: datahub-sync-worker
    app.kubernetes.io/part-of: haskell-datahub
spec:
  replicas: 1

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app.kubernetes.io/name: datahub-sync-worker

  template:
    metadata:
      labels:
        app.kubernetes.io/name: datahub-sync-worker
        app.kubernetes.io/part-of: haskell-datahub

    spec:
      containers:
        - name: worker
          image: haskell-datahub:dev
          imagePullPolicy: Never

          args:
            - sync-worker

          resources:
            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 500m
              memory: 256Mi

      terminationGracePeriodSeconds: 15
